@@ -1,3 +1,6 @@
+2003-02-15  Martin Willers <willers@xm-arts.de>
+	- using KActions for start, stop, and configure entries
+
 2003-02-07  Martin Willers <willers@xm-arts.de>
 	- fixed inserting of new items into listview
 	- simplified layout in config-window
